--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
      
 		<figure>
 			<video id="video"></video>
-      <audio src="https://raw.githubusercontent.com/scribbletune/sampler/master/samples/piano/piano69.wav" id="audio"></audio>
+      <audio src="https://cdn.glitch.com/bde82fbb-ee14-4c97-a669-94a07bcbedb3%2Fcmajor.wav?v=1580127634437" id="audio"></audio>
 
 			<figcaption>Live Video</figcaption>
 		</figure>
