--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link href="img/logo.png" rel="icon" />
 
     <!-- import the webpage's stylesheet -->
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="css/style.css" />
 
     <!-- import the webpage's javascript file -->
   </head>
@@ -82,10 +82,10 @@
     </figure>
 
     <script src="https://webrtc.github.io/adapter/adapter-1.0.7.js"></script>
-    <script src="diff.js"></script>
-    <script src="fretboard.js"></script>
-    <script src="chords.js"></script>
-    <script src="script.js"></script>
+    <script src="js/diff.js"></script>
+    <script src="js/fretboard.js"></script>
+    <script src="js/chords.js"></script>
+    <script src="js/script.js"></script>
     
   </body>
 </html>
