--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     <script src="https://webrtc.github.io/adapter/adapter-1.0.7.js"></script>
     <script src="js/diff.js"></script>
     <script src="js/fretboard.js"></script>
-    <script src="js/chords.js"></script>
+    <script src="js/chord.js"></script>
     <script src="js/script.js"></script>
     
   </body>
