--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link href="https://cdn.glitch.com/bde82fbb-ee14-4c97-a669-94a07bcbedb3%2Fguitar-player.png?v=1580157619909" rel="icon" />
 
     <!-- import the webpage's stylesheet -->
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="css/style.css" />
 
     <!-- import the webpage's javascript file -->
   </head>
@@ -87,10 +87,10 @@
     </figure>
 
     <script src="https://webrtc.github.io/adapter/adapter-1.0.7.js"></script>
-    <script src="diff.js"></script>
-    <script src="fretboard.js"></script>
-    <script src="chord.js"></script>
-    <script src="script.js"></script>
+    <script src="js/diff.js"></script>
+    <script src="js/fretboard.js"></script>
+    <script src="js/chord.js"></script>
+    <script src="js/script.js"></script>
     
   </body>
 </html>
