--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
     <!-- import the webpage's javascript file -->
   </head>
   <body onload="init();">
-    
+<!--     
      <div class="load">
 <img class="loader1" width="100px" src="https://cdn.glitch.com/bde82fbb-ee14-4c97-a669-94a07bcbedb3%2Fguitar-player.png?v=1580157619909"></div>
-</div>
+</div> -->
     <!--     <h1>AIr</h1> -->
     <!-- Create some boxes to test various gestures. -->
 
