--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     <figure>
       <video id="video"></video>
       <audio
-        src="https://cdn.glitch.com/bde82fbb-ee14-4c97-a669-94a07bcbedb3%2Fcmajor.wav?v=1580127634437"
+        src="chords/cmajor.wav"
         id="audio"
       ></audio>
 
