--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
     </div>
 
     <figure>
-      <video id="video"></video>
+      <video id="video" autoplay></video>
       <audio
         src="https://raw.githubusercontent.com/msimbao/air/master/chords/amajor.wav"
         id="audio"
