--- a/index.html
+++ b/index.html
@@ -1,219 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-  <!-- =======================================================
-    Name: Air - Mobile Guitar App
-    Author: Mphatso Simbao
- ======================================================= -->
-
-  <head>
-    <title>Air - Mobile Guitar</title>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-      integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
-      crossorigin="anonymous"
-    />
-
-    <!-- Favicons -->
-    <link
-      href="https://cdn.glitch.com/bde82fbb-ee14-4c97-a669-94a07bcbedb3%2Fguitar-player.png?v=1580157619909"
-      rel="icon"
-    />
-
-    <!-- import the webpage's stylesheet -->
-    <link rel="stylesheet" href="css/style.css" />
-
-    <!-- import the webpage's javascript file -->
-    <link
-      href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"
-    />
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-  </head>
-  <body onload="init();">
-    <!--     <h1>AIr</h1> -->
-    <!-- Create some boxes to test various gestures. -->
-
-    <nav>
-      <div class="nav nav-tabs" id="nav-tab" role="tablist">
-        <a
-          class="nav-item nav-link active"
-          id="nav-home-tab"
-          data-toggle="tab"
-          href="#nav-home"
-          role="tab"
-          aria-controls="nav-home"
-          aria-selected="true"
-          >Chords</a
-        >
-        <a
-          class="nav-item nav-link"
-          id="nav-profile-tab"
-          data-toggle="tab"
-          href="#nav-profile"
-          role="tab"
-          aria-controls="nav-profile"
-          aria-selected="false"
-          >Frets</a
-        >
-        <a
-          class="nav-item nav-link"
-          id="nav-contact-tab"
-          data-toggle="tab"
-          href="#nav-contact"
-          role="tab"
-          aria-controls="nav-contact"
-          aria-selected="false"
-          >Manual</a
-        >
-      </div>
-    </nav>
-    <div class="tab-content" id="nav-tabContent">
-      <div
-        class="tab-pane fade show active"
-        id="nav-home"
-        role="tabpanel"
-        aria-labelledby="nav-home-tab"
-      >
-        <div id="chordboard">
-          <div id="upper" class="set">
-            <div id="a_chord" class="chord">A</div>
-            <div id="c_chord" class="chord">C</div>
-            <div id="d_chord" class="chord">D</div>
-          </div>
-
-          <div id="lower" class="set">
-            <div id="e_chord" class="chord">E</div>
-            <div id="f_chord" class="chord">F</div>
-            <div id="g_chord" class="chord">G</div>
-          </div>
-        </div>
-      </div>
-      <div
-        class="tab-pane fade"
-        id="nav-profile"
-        role="tabpanel"
-        aria-labelledby="nav-profile-tab"
-      >
-        <div id="fretboard">
-          <div id="Estring" class="string">
-            <div id="G" class="position">G</div>
-            <div id="F_" class="position">F#</div>
-            <div id="F" class="position">F</div>
-          </div>
-
-          <div id="astring" class="string">
-            <div id="Ca" class="position">C</div>
-            <div id="B" class="position">B</div>
-            <div id="A_a" class="position">A</div>
-          </div>
-
-          <div id="dstring" class="string">
-            <div id="Fd" class="position">F</div>
-            <div id="E" class="position">E</div>
-            <div id="D_" class="position">D#</div>
-          </div>
-
-          <div id="gstring" class="string">
-            <div id="A_" class="position">A#</div>
-            <div id="A" class="position">A</div>
-            <div id="G_" class="position">G#</div>
-          </div>
-
-          <div id="bstring" class="string">
-            <div id="D" class="position">D</div>
-            <div id="C_" class="position">C#</div>
-            <div id="C" class="position">C</div>
-          </div>
-
-          <div id="estring" class="string">
-            <div id="g" class="position">G</div>
-            <div id="f_" class="position">F#</div>
-            <div id="f" class="position">F</div>
-          </div>
-        </div>
-      </div>
-      <div
-        class="tab-pane fade"
-        id="nav-contact"
-        role="tabpanel"
-        aria-labelledby="nav-contact-tab"
-      >
-        ...
-      </div>
-    </div>
-
-    <figure>
-      <video id="video" autoplay></video>
-      <audio
-        src="https://raw.githubusercontent.com/msimbao/air/master/chords/amajor.wav"
-        id="audio"
-        type="audio/wav"
-        preload="auto"
-        autobuffer
-      ></audio>
-      <!--        <audio
-        src="https://cdn.glitch.com/bde82fbb-ee14-4c97-a669-94a07bcbedb3%2Fcmajor.wav?v=1580127634437"
-        id="audio2"
-              type="audio/wav" preload="auto" autobuffer
-      ></audio> -->
-
-      <figcaption>Live Video</figcaption>
-    </figure>
-
-    <figure>
-      <canvas id="motion"></canvas>
-      <figcaption>
-        Motion Heatmap<br />
-        Score: <span id="score">?</span>
-      </figcaption>
-    </figure>
-
-    <script
-      src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-      integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-      integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
-      integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
-      crossorigin="anonymous"
-    ></script>
-
-    <script src="https://webrtc.github.io/adapter/adapter-1.0.7.js"></script>
-    <script src="js/diff.js"></script>
-    <script src="js/fretboard.js"></script>
-    <script src="js/chord.js"></script>
-
-    <script id="worker1" type="javascript/worker">
-          var thresh = thresh;
-
-      // This script won't be parsed by JS engines because its type is javascript/worker.
-      self.onmessage = function(e) {
-
-      if(e.data > 210){
-          self.postMessage(true);
-      } else {
-        self.postMessage(false);
-      }
-            self.close();
-
-
-        }
-
-
-      // Rest of your worker code goes here.
-    </script>
-
-    <script src="js/script.js"></script>
-  </body>
-</html>
+<!DOCTYPE html><html lang="en"><!--=======================================================Name: Air - Mobile Guitar App Author: Mphatso Simbao=======================================================--> <head> <title>Air - Mobile Guitar</title> <meta charset="utf-8"/> <meta http-equiv="X-UA-Compatible" content="IE=edge"/> <meta name="viewport" content="width=device-width, initial-scale=1"/> <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous"/> <link href="https://cdn.glitch.com/bde82fbb-ee14-4c97-a669-94a07bcbedb3%2Fguitar-player.png?v=1580157619909" rel="icon"/> <link rel="stylesheet" href="css/style.css"/> <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"/> <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script> <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script> <script src="js/webfontaudio.js"></script> <script src='https://surikov.github.io/webaudiofontdata/sound/0253_Acoustic_Guitar_sf2_file.js'></script><script>var guitar=_tone_0253_Acoustic_Guitar_sf2_file;var AudioContextFunc=window.AudioContext || window.webkitAudioContext;var audioContext=new AudioContextFunc();var output=audioContext.destination;var player=new WebAudioFontPlayer();var now=0;var C=0, Cs=1, D=2, Ds=3, E=4, F=5, Fs=6, G=7, Gs=8, A=9, As=10, B=11;var O=12;var _6th=E +O*3, _5th=A +O*3, _4th=D +O*4, _3rd=G +O*4, _2nd=B +O*4, _1st=E +O*5;var fretsAm=[-1, 0, 2, 2, 1, 0];var fretsC=[-1, 3, 2, 0, 1, 0];var fretsE=[ 0, 2, 2, 1, 0, 0];var fretsG=[ 3, 2, 0, 0, 0, 3];var fretsDm=[-1,-1, 0, 2, 3, 1];player.loader.decodeAfterLoading(audioContext, '_tone_0253_Acoustic_Guitar_sf2_file');function pitches(frets){var p=[];if (frets[0] > -1) p.push(_6th + frets[0]);if (frets[1] > -1) p.push(_5th + frets[1]);if (frets[2] > -1) p.push(_4th + frets[2]);if (frets[3] > -1) p.push(_3rd + frets[3]);if (frets[4] > -1) p.push(_2nd + frets[4]);if (frets[5] > -1) p.push(_1st + frets[5]);return p;}function cancel(){player.cancelQueue(audioContext);}</script> </head> <body onload="init();"> <nav> <div class="nav nav-tabs" id="nav-tab" role="tablist"> <a class="nav-item nav-link active" id="nav-home-tab" data-toggle="tab" href="#nav-home" role="tab" aria-controls="nav-home" aria-selected="true" >Chords</a > <a class="nav-item nav-link" id="nav-profile-tab" data-toggle="tab" href="#nav-profile" role="tab" aria-controls="nav-profile" aria-selected="false" >Frets</a > <a class="nav-item nav-link" id="nav-contact-tab" data-toggle="tab" href="#nav-contact" role="tab" aria-controls="nav-contact" aria-selected="false" >Manual</a > </div></nav> <div class="tab-content" id="nav-tabContent"> <div class="tab-pane fade show active" id="nav-home" role="tabpanel" aria-labelledby="nav-home-tab" > <div id="chordboard"> <div id="upper" class="set"> <div id="a_chord" class="chord">A</div><div id="c_chord" class="chord">C</div><div id="d_chord" class="chord">D</div></div><div id="lower" class="set"> <div id="e_chord" class="chord">E</div><div id="f_chord" class="chord">F</div><div id="g_chord" class="chord">G</div></div></div></div><div class="tab-pane fade" id="nav-profile" role="tabpanel" aria-labelledby="nav-profile-tab" > <div id="fretboard"> <div id="Estring" class="string"> <div id="G" class="position">G</div><div id="F_" class="position">F#</div><div id="F" class="position">F</div></div><div id="astring" class="string"> <div id="Ca" class="position">C</div><div id="B" class="position">B</div><div id="A_a" class="position">A</div></div><div id="dstring" class="string"> <div id="Fd" class="position">F</div><div id="E" class="position">E</div><div id="D_" class="position">D#</div></div><div id="gstring" class="string"> <div id="A_" class="position">A#</div><div id="A" class="position">A</div><div id="G_" class="position">G#</div></div><div id="bstring" class="string"> <div id="D" class="position">D</div><div id="C_" class="position">C#</div><div id="C" class="position">C</div></div><div id="estring" class="string"> <div id="g" class="position">G</div><div id="f_" class="position">F#</div><div id="f" class="position">F</div></div></div></div><div class="tab-pane fade" id="nav-contact" role="tabpanel" aria-labelledby="nav-contact-tab" > Hello. Welcome to Air. Below are instructions for how you can make strum and play different awesome guitar songs. </div></div><figure> <video id="video" autoplay></video><!-- <audio src="https://raw.githubusercontent.com/msimbao/air/master/chords/amajor.wav" id="audio" type="audio/wav" preload="auto" autobuffer ></audio> --><!-- <audio src="https://cdn.glitch.com/bde82fbb-ee14-4c97-a669-94a07bcbedb3%2Fcmajor.wav?v=1580127634437" id="audio2" type="audio/wav" preload="auto" autobuffer ></audio> --> <figcaption>Live Video</figcaption> </figure> <figure> <canvas id="motion"></canvas> <figcaption> Motion Heatmap<br/> Score: <span id="score">?</span> </figcaption> </figure> <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous" ></script> <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous" ></script> <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous" ></script> <script src="https://webrtc.github.io/adapter/adapter-1.0.7.js"></script> <script src="js/diff.js"></script> <script src="js/fretboard.js"></script> <script src="js/chord.js"></script><!-- <script id="worker1" type="javascript/worker"> var thresh=thresh; // This script won't be parsed by JS engines because its type is javascript/worker. self.onmessage=function(e){if(e.data > 210){self.postMessage(true);}else{self.postMessage(false);}self.close();}// Rest of your worker code goes here. </script> --> <script src="js/script.js"></script> </body></html>
